# curves

./: package.xml
include/curves/: bernstein.h  bezier_curve.h  cubic_hermite_spline.h  so3_linear.h
python/: python_variables.cpp  python_variables.h
