<?xml version="1.0"?>
<package format="3">
  <name>loco3d_curves</name>
  <version>0.5.2</version>
  <description>Library for creating smooth cubic splines.</description>
  <author>Steve Tonneau</author>
  <author>Pierre Fernbach</author>
  <author>Jason Chemin</author>
  <author>Guilhem Saurel</author>
  <!-- The maintainer listed here is for the ROS release to receive emails for the buildfarm. 
  Please check the repository URL for full list of authors and maintainers. -->
  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/loco-3d/curves</url>

  <build_depend>doxygen</build_depend>
  <build_depend>git</build_depend>
  <doc_depend>doxygen</doc_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend>eigenpy</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
